修改页面读取的 result.msg 为 result.message

--- a/src/main/resources/templates/demo/operate/other.html
+++ b/src/main/resources/templates/demo/operate/other.html
@@ -67,7 +67,7 @@
 		            		location.reload();
 		            	});
 	            	} else {
-	            		alert(result.msg);
+	            		alert(result.message);
 	            	}
 	            }
 	        })
