--- a/src/main/resources/templates/demo/table/dynamicColumns.html
+++ b/src/main/resources/templates/demo/table/dynamicColumns.html
@@ -47,9 +47,9 @@
                 if (result.code == web_status.SUCCESS) {
                 	setColumns(result.data);
                 } else if (result.code == web_status.WARNING) {
-                    $.modal.alertWarning(result.msg)
+                    $.modal.alertWarning(result.message)
                 } else {
-                    $.modal.alertError(result.msg);
+                    $.modal.alertError(result.message);
                 }
                 $.modal.closeLoading();
             });
