--- a/src/main/resources/templates/monitor/job/cron.html
+++ b/src/main/resources/templates/monitor/job/cron.html
@@ -1151,7 +1151,7 @@ $('#runBtn').click(function() {
                 $.modal.alertError("表达式有误，未查询出结果");
             }
         } else {
-            $.modal.alertError(result.msg);
+            $.modal.alertError(result.message);
         }
     });
 });
