--- a/src/main/resources/templates/tool/gen/gen.html
+++ b/src/main/resources/templates/tool/gen/gen.html
@@ -165,7 +165,7 @@
 	                        tab: items
 		                });
 				} else {
-					$.modal.alertError(result.msg);
+					$.modal.alertError(result.message);
 				}
 				$.modal.closeLoading();
 			});
