--- a/src/main/resources/templates/system/notice/add.html
+++ b/src/main/resources/templates/system/notice/add.html
@@ -73,7 +73,7 @@
 	                if (result.code == web_status.SUCCESS) {
 	                	$(obj).summernote('editor.insertImage', result.url, result.fileName);
 					} else {
-						$.modal.alertError(result.msg);
+						$.modal.alertError(result.message);
 					}
 	            },
 	            error: function(error) {
