--- a/src/main/resources/vm/java/controller.java.vm
+++ b/src/main/resources/vm/java/controller.java.vm
@@ -1,9 +1,9 @@
-package ${packageName}.${businessName}.controller;
+package ${packageName}.controller;
 
 import java.util.List;
 import org.apache.shiro.authz.annotation.RequiresPermissions;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.stereotype.Controller;
+##import org.springframework.stereotype.Controller;
 import org.springframework.ui.ModelMap;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
@@ -12,17 +12,23 @@ import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.ResponseBody;
 import com.ruoyi.framework.aspectj.lang.annotation.Log;
 import com.ruoyi.framework.aspectj.lang.enums.BusinessType;
-import ${packageName}.${businessName}.domain.${ClassName};
-import ${packageName}.${businessName}.service.I${ClassName}Service;
-import com.ruoyi.framework.web.controller.BaseController;
-import com.ruoyi.framework.web.domain.AjaxResult;
+import ${packageName}.entity.${ClassName};
+import ${packageName}.service.I${ClassName}Service;
+import io.swagger.annotations.Api;
+import io.swagger.annotations.ApiOperation;
+import lombok.extern.slf4j.Slf4j;
+##import com.ruoyi.framework.web.controller.BaseController;
 import com.ruoyi.common.utils.poi.ExcelUtil;
-#if($table.crud || $table.sub)
+import org.springframework.web.bind.annotation.RestController;
+import com.laien.demo.controller.base.ResponseController;
+import com.laien.demo.controller.base.ResponseResult;
+###if($table.crud || $table.sub)
 import com.ruoyi.framework.web.page.TableDataInfo;
-#elseif($table.tree)
-import com.ruoyi.common.utils.StringUtils;
-import com.ruoyi.framework.web.domain.Ztree;
-#end
+import com.ruoyi.framework.web.domain.AjaxResult;
+###elseif($table.tree)
+##import com.ruoyi.common.utils.StringUtils;
+##import com.ruoyi.framework.web.domain.Ztree;
+###end
 
 /**
  * ${functionName}Controller
@@ -30,9 +36,11 @@ import com.ruoyi.framework.web.domain.Ztree;
  * @author ${author}
  * @date ${datetime}
  */
-@Controller
-@RequestMapping("/${moduleName}/${businessName}")
-public class ${ClassName}Controller extends BaseController
+@Slf4j
+@Api(tags = "${functionName}")
+@RestController
+@RequestMapping("/${className}")
+public class ${ClassName}Controller extends ResponseController
 {
     private String prefix = "${moduleName}/${businessName}";
 
@@ -80,11 +88,12 @@ public class ${ClassName}Controller extends BaseController
     @Log(title = "${functionName}", businessType = BusinessType.EXPORT)
     @PostMapping("/export")
     @ResponseBody
-    public AjaxResult export(${ClassName} ${className})
+    public ResponseResult export(${ClassName} ${className})
     {
         List<${ClassName}> list = ${className}Service.select${ClassName}List(${className});
         ExcelUtil<${ClassName}> util = new ExcelUtil<${ClassName}>(${ClassName}.class);
-        return util.exportExcel(list, "${functionName}数据");
+        AjaxResult result = util.exportExcel(list, "${functionName}数据");
+        return succ(result.get(AjaxResult.DATA_TAG));
     }
 
 #if($table.crud || $table.sub)
@@ -118,9 +127,9 @@ public class ${ClassName}Controller extends BaseController
     @Log(title = "${functionName}", businessType = BusinessType.INSERT)
     @PostMapping("/add")
     @ResponseBody
-    public AjaxResult addSave(${ClassName} ${className})
+    public ResponseResult<Integer> addSave(${ClassName} ${className})
     {
-        return toAjax(${className}Service.insert${ClassName}(${className}));
+        return succ(${className}Service.insert${ClassName}(${className}));
     }
 
     /**
@@ -142,9 +151,9 @@ public class ${ClassName}Controller extends BaseController
     @Log(title = "${functionName}", businessType = BusinessType.UPDATE)
     @PostMapping("/edit")
     @ResponseBody
-    public AjaxResult editSave(${ClassName} ${className})
+    public ResponseResult<Integer> editSave(${ClassName} ${className})
     {
-        return toAjax(${className}Service.update${ClassName}(${className}));
+        return succ(${className}Service.update${ClassName}(${className}));
     }
 
 #if($table.crud || $table.sub)
@@ -155,48 +164,10 @@ public class ${ClassName}Controller extends BaseController
     @Log(title = "${functionName}", businessType = BusinessType.DELETE)
     @PostMapping( "/remove")
     @ResponseBody
-    public AjaxResult remove(String ids)
+    public ResponseResult<Integer> remove(String ids)
     {
-        return toAjax(${className}Service.delete${ClassName}By${pkColumn.capJavaField}s(ids));
-    }
-#elseif($table.tree)
-    /**
-     * 删除
-     */
-    @RequiresPermissions("${permissionPrefix}:remove")
-    @Log(title = "${functionName}", businessType = BusinessType.DELETE)
-    @GetMapping("/remove/{${pkColumn.javaField}}")
-    @ResponseBody
-    public AjaxResult remove(@PathVariable("${pkColumn.javaField}") ${pkColumn.javaType} ${pkColumn.javaField})
-    {
-        return toAjax(${className}Service.delete${ClassName}By${pkColumn.capJavaField}(${pkColumn.javaField}));
+        return succ(${className}Service.delete${ClassName}By${pkColumn.capJavaField}s(ids));
     }
 #end
-#if($table.tree)
 
-    /**
-     * 选择${functionName}树
-     */
-#set($BusinessName=$businessName.substring(0,1).toUpperCase() + ${businessName.substring(1)})
-    @GetMapping(value = { "/select${BusinessName}Tree/{${pkColumn.javaField}}", "/select${BusinessName}Tree/" })
-    public String select${BusinessName}Tree(@PathVariable(value = "${pkColumn.javaField}", required = false) Long ${pkColumn.javaField}, ModelMap mmap)
-    {
-        if (StringUtils.isNotNull(${pkColumn.javaField}))
-        {
-            mmap.put("${className}", ${className}Service.select${ClassName}By${pkColumn.capJavaField}(${pkColumn.javaField}));
-        }
-        return prefix + "/tree";
-    }
-
-    /**
-     * 加载${functionName}树列表
-     */
-    @GetMapping("/treeData")
-    @ResponseBody
-    public List<Ztree> treeData()
-    {
-        List<Ztree> ztrees = ${className}Service.select${ClassName}Tree();
-        return ztrees;
-    }
-#end
 }
