--- a/src/main/resources/vm/java/service.java.vm
+++ b/src/main/resources/vm/java/service.java.vm
@@ -1,22 +1,22 @@
-package ${packageName}.${businessName}.service;
+package ${packageName}.service;
 
+import ${packageName}.entity.${ClassName};
+import com.baomidou.mybatisplus.extension.service.IService;
 import java.util.List;
-import ${packageName}.${businessName}.domain.${ClassName};
-#if($table.tree)
-import com.ruoyi.framework.web.domain.Ztree;
-#end
+###if($table.tree)
+##import com.ruoyi.framework.web.domain.Ztree;
+###end
 
 /**
  * ${functionName}Service接口
- * 
+ *
  * @author ${author}
  * @date ${datetime}
  */
-public interface I${ClassName}Service 
-{
+public interface I${ClassName}Service extends IService<${ClassName}> {
     /**
      * 查询${functionName}
-     * 
+     *
      * @param ${pkColumn.javaField} ${functionName}主键
      * @return ${functionName}
      */
@@ -24,7 +24,7 @@ public interface I${ClassName}Service
 
     /**
      * 查询${functionName}列表
-     * 
+     *
      * @param ${className} ${functionName}
      * @return ${functionName}集合
      */
@@ -32,7 +32,7 @@ public interface I${ClassName}Service
 
     /**
      * 新增${functionName}
-     * 
+     *
      * @param ${className} ${functionName}
      * @return 结果
      */
@@ -40,7 +40,7 @@ public interface I${ClassName}Service
 
     /**
      * 修改${functionName}
-     * 
+     *
      * @param ${className} ${functionName}
      * @return 结果
      */
@@ -48,7 +48,7 @@ public interface I${ClassName}Service
 
     /**
      * 批量删除${functionName}
-     * 
+     *
      * @param ${pkColumn.javaField}s 需要删除的${functionName}主键集合
      * @return 结果
      */
@@ -56,18 +56,18 @@ public interface I${ClassName}Service
 
     /**
      * 删除${functionName}信息
-     * 
+     *
      * @param ${pkColumn.javaField} ${functionName}主键
      * @return 结果
      */
     public int delete${ClassName}By${pkColumn.capJavaField}(${pkColumn.javaType} ${pkColumn.javaField});
-#if($table.tree)
-
-    /**
-     * 查询${functionName}树列表
-     * 
-     * @return 所有${functionName}信息
-     */
-    public List<Ztree> select${ClassName}Tree();
-#end
+###if($table.tree)
+##
+##    /**
+##     * 查询${functionName}树列表
+##     *
+##     * @return 所有${functionName}信息
+##     */
+##    public List<Ztree> select${ClassName}Tree();
+###end
 }
