适配java代码生成 适配web页面分页功能

--- a/src/main/resources/vm/java/controller.java.vm
+++ b/src/main/resources/vm/java/controller.java.vm
@@ -1,6 +1,6 @@
 package ${packageName}.controller;
 
-import java.util.List;
+##import java.util.List;
 import org.apache.shiro.authz.annotation.RequiresPermissions;
 import org.springframework.beans.factory.annotation.Autowired;
 ##import org.springframework.stereotype.Controller;
@@ -23,8 +23,9 @@ import org.springframework.web.bind.annotation.RestController;
 import com.laien.demo.controller.base.ResponseController;
 import com.laien.demo.controller.base.ResponseResult;
 ###if($table.crud || $table.sub)
-import com.ruoyi.framework.web.page.TableDataInfo;
+##import com.ruoyi.framework.web.page.TableDataInfo;
 import com.ruoyi.framework.web.domain.AjaxResult;
+import com.laien.demo.response.PageRes;
 ###elseif($table.tree)
 ##import com.ruoyi.common.utils.StringUtils;
 ##import com.ruoyi.framework.web.domain.Ztree;
@@ -61,23 +62,14 @@ public class ${ClassName}Controller extends ResponseController
     @RequiresPermissions("${permissionPrefix}:list")
     @PostMapping("/list")
     @ResponseBody
-    public TableDataInfo list(${ClassName} ${className})
+    public ResponseResult<PageRes<${ClassName}>> list(Integer pageNum,Integer pageSize,${ClassName} ${className})
     {
-        startPage();
-        List<${ClassName}> list = ${className}Service.select${ClassName}List(${className});
-        return getDataTable(list);
-    }
-#elseif($table.tree)
-    /**
-     * 查询${functionName}树列表
-     */
-    @RequiresPermissions("${permissionPrefix}:list")
-    @PostMapping("/list")
-    @ResponseBody
-    public List<${ClassName}> list(${ClassName} ${className})
-    {
-        List<${ClassName}> list = ${className}Service.select${ClassName}List(${className});
-        return list;
+##        startPage();
+##        List<${ClassName}> list = ${className}Service.select${ClassName}List(${className});
+##        return getDataTable(list);
+
+        PageRes<${ClassName}> page = ${className}Service.select${ClassName}List(pageNum, pageSize, ${className});
+        return succ(page);
     }
 #end
 
@@ -90,9 +82,10 @@ public class ${ClassName}Controller extends ResponseController
     @ResponseBody
     public ResponseResult export(${ClassName} ${className})
     {
-        List<${ClassName}> list = ${className}Service.select${ClassName}List(${className});
+##        List<${ClassName}> list = ${className}Service.select${ClassName}List(${className});
+        PageRes<${ClassName}> page = ${className}Service.select${ClassName}List(1, 10000, ${className});
         ExcelUtil<${ClassName}> util = new ExcelUtil<${ClassName}>(${ClassName}.class);
-        AjaxResult result = util.exportExcel(list, "${functionName}数据");
+        AjaxResult result = util.exportExcel(page.getList(), "${functionName}数据");
         return succ(result.get(AjaxResult.DATA_TAG));
     }
 
