--- a/src/main/resources/vm/java/mapper.java.vm
+++ b/src/main/resources/vm/java/mapper.java.vm
@@ -12,19 +12,19 @@ import ${packageName}.entity.${ClassName};
  * @date ${datetime}
  */
 public interface ${ClassName}Mapper extends BaseMapper<${ClassName}> {
-    /**
-     * 查询${functionName}
-     *
-     * @param ${pkColumn.javaField} ${functionName}主键
-     * @return ${functionName}
-     */
-    public ${ClassName} select${ClassName}By${pkColumn.capJavaField}(${pkColumn.javaType} ${pkColumn.javaField});
-
-    /**
-     * 查询${functionName}列表
-     *
-     * @param ${className} ${functionName}
-     * @return ${functionName}集合
-     */
-    public List<${ClassName}> select${ClassName}List(${ClassName} ${className});
+##    /**
+##     * 查询${functionName}
+##     *
+##     * @param ${pkColumn.javaField} ${functionName}主键
+##     * @return ${functionName}
+##     */
+##    public ${ClassName} select${ClassName}By${pkColumn.capJavaField}(${pkColumn.javaType} ${pkColumn.javaField});
+##
+##    /**
+##     * 查询${functionName}列表
+##     *
+##     * @param ${className} ${functionName}
+##     * @return ${functionName}集合
+##     */
+##    public List<${ClassName}> select${ClassName}List(${ClassName} ${className});
 }
