--- a/src/main/resources/vm/java/serviceImpl.java.vm
+++ b/src/main/resources/vm/java/serviceImpl.java.vm
@@ -1,7 +1,7 @@
 package ${packageName}.service.impl;
 
 
-import java.util.List;
+##import java.util.List;
 ###if($table.tree)
 ##import java.util.ArrayList;
 ##import com.ruoyi.framework.web.domain.Ztree;
@@ -31,11 +31,21 @@ import org.springframework.stereotype.Service;
 import javax.annotation.Resource;
 import com.laien.demo.constant.GlobalConstant;
 import com.google.common.collect.Lists;
+import com.laien.demo.response.PageRes;
 import com.baomidou.mybatisplus.core.conditions.update.LambdaUpdateWrapper;
-
+import com.ruoyi.common.utils.sql.SqlUtil;
+import com.ruoyi.framework.web.page.PageDomain;
+import com.ruoyi.framework.web.page.TableSupport;
 ##import ${packageName}.${businessName}.service.I${ClassName}Service;
 import com.ruoyi.common.utils.text.Convert;
-
+import java.util.List;
+import java.util.Map;
+import java.util.Set;
+import com.alibaba.fastjson.JSON;
+import com.alibaba.fastjson.JSONObject;
+import com.baomidou.mybatisplus.core.conditions.query.QueryWrapper;
+import com.github.pagehelper.Page;
+import com.github.pagehelper.PageHelper;
 /**
  * ${functionName}Service业务层处理
  * 
@@ -68,9 +78,27 @@ public class ${ClassName}ServiceImpl extends ServiceImpl<${ClassName}Mapper, ${C
      * @return ${functionName}
      */
     @Override
-    public List<${ClassName}> select${ClassName}List(${ClassName} ${className})
+    public PageRes<${ClassName}> select${ClassName}List(Integer pageNum,Integer pageSize,${ClassName} ${className})
     {
-        return ${className}Mapper.select${ClassName}List(${className});
+##        return ${className}Mapper.select${ClassName}List(${className});
+        PageDomain pageDomain = TableSupport.buildPageRequest();
+        String orderBy = SqlUtil.escapeOrderBySql(pageDomain.getOrderBy());
+        Boolean reasonable = pageDomain.getReasonable();
+        Page<Object> page = PageHelper.startPage(pageNum, pageSize, orderBy).setReasonable(reasonable);
+        JSONObject jsonObject = JSON.parseObject(JSON.toJSONString(${className}));
+        Set<Map.Entry<String, Object>> entries = jsonObject.entrySet();
+        QueryWrapper<${ClassName}> queryWrapper = new QueryWrapper<>();
+        entries.stream().forEach(entry -> {
+            Object value = entry.getValue();
+            if (value != null) {
+                queryWrapper.eq(entry.getKey(), value);
+            }
+        });
+        if (!queryWrapper.isEmptyOfWhere()) {
+            List<${ClassName}> ${className}s = list(queryWrapper);
+            return new PageRes<>(pageNum, pageSize, page.getTotal(), page.getPages(), ${className}s);
+        }
+        return new PageRes<>(pageNum, pageSize, 0, 0, Lists.newArrayListWithCapacity(0));
     }
 
     /**
