--- a/src/main/resources/vm/java/controller.java.vm
+++ b/src/main/resources/vm/java/controller.java.vm
@@ -3,7 +3,7 @@ package ${packageName}.controller;
 ##import java.util.List;
 import org.apache.shiro.authz.annotation.RequiresPermissions;
 import org.springframework.beans.factory.annotation.Autowired;
-##import org.springframework.stereotype.Controller;
+import org.springframework.stereotype.Controller;
 import org.springframework.ui.ModelMap;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
@@ -19,7 +19,7 @@ import io.swagger.annotations.ApiOperation;
 import lombok.extern.slf4j.Slf4j;
 ##import com.ruoyi.framework.web.controller.BaseController;
 import com.ruoyi.common.utils.poi.ExcelUtil;
-import org.springframework.web.bind.annotation.RestController;
+##import org.springframework.web.bind.annotation.RestController;
 import com.laien.demo.controller.base.ResponseController;
 import com.laien.demo.controller.base.ResponseResult;
 ###if($table.crud || $table.sub)
@@ -39,7 +39,7 @@ import com.laien.demo.response.PageRes;
  */
 @Slf4j
 @Api(tags = "${functionName}")
-@RestController
+@Controller
 @RequestMapping("/${className}")
 public class ${ClassName}Controller extends ResponseController
 {
