代码生成器适配完成-初版

--- a/src/main/resources/templates/demo/theme/add.html
+++ b/src/main/resources/templates/demo/theme/add.html
@@ -29,7 +29,7 @@
 
         function submitHandler() {
             if ($.validate.form()) {
-                $.operate.save(prefix + "/add", $('#form-theme-add').serialize());
+                $.operate.save("/demoTheme" + "/add", $('#form-theme-add').serialize());
             }
         }
     </script>
