--- a/src/main/resources/templates/demo/theme/theme.html
+++ b/src/main/resources/templates/demo/theme/theme.html
@@ -62,11 +62,11 @@
 
         $(function() {
             var options = {
-                url: prefix + "/list",
-                createUrl: prefix + "/add",
-                updateUrl: prefix + "/edit/{id}",
-                removeUrl: prefix + "/remove",
-                exportUrl: prefix + "/export",
+                url: "/demoTheme" + "/list",
+                createUrl: "/demoTheme" + "/add",
+                updateUrl: "/demoTheme" + "/edit/{id}",
+                removeUrl: "/demoTheme" + "/remove",
+                exportUrl: "/demoTheme" + "/export",
                 modalName: "主题",
                 columns: [{
                     checkbox: true
