--- a/src/main/resources/vm/html/edit.html.vm
+++ b/src/main/resources/vm/html/edit.html.vm
@@ -204,7 +204,7 @@
 
         function submitHandler() {
             if ($.validate.form()) {
-                $.operate.save(prefix + "/edit", $('#form-${businessName}-edit').serialize());
+                $.operate.save("/${className}" + "/edit", $('#form-${businessName}-edit').serialize());
             }
         }
 #foreach($column in $columns)
