--- a/src/main/resources/vm/java/serviceImpl.java.vm
+++ b/src/main/resources/vm/java/serviceImpl.java.vm
@@ -23,12 +23,15 @@ import com.google.common.collect.Lists;
 ###end
 ##import ${packageName}.${businessName}.mapper.${ClassName}Mapper;
 ##import ${packageName}.${businessName}.domain.${ClassName};
+import org.apache.commons.lang3.StringUtils;
 import com.baomidou.mybatisplus.extension.service.impl.ServiceImpl;
 import ${packageName}.entity.${ClassName};
 import ${packageName}.mapper.${ClassName}Mapper;
 import ${packageName}.service.I${ClassName}Service;
 import org.springframework.stereotype.Service;
+
 import javax.annotation.Resource;
+
 import com.laien.demo.constant.GlobalConstant;
 import com.google.common.collect.Lists;
 import com.laien.demo.response.PageRes;
@@ -38,23 +41,25 @@ import com.ruoyi.framework.web.page.PageDomain;
 import com.ruoyi.framework.web.page.TableSupport;
 ##import ${packageName}.${businessName}.service.I${ClassName}Service;
 import com.ruoyi.common.utils.text.Convert;
+
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
+
 import com.alibaba.fastjson.JSON;
 import com.alibaba.fastjson.JSONObject;
 import com.baomidou.mybatisplus.core.conditions.query.QueryWrapper;
 import com.github.pagehelper.Page;
 import com.github.pagehelper.PageHelper;
+
 /**
  * ${functionName}Service业务层处理
- * 
+ *
  * @author ${author}
  * @date ${datetime}
  */
 @Service
-public class ${ClassName}ServiceImpl extends ServiceImpl<${ClassName}Mapper, ${ClassName}> implements I${ClassName}Service
-{
+public class ${ClassName}ServiceImpl extends ServiceImpl<${ClassName}Mapper, ${ClassName}> implements I${ClassName}Service {
     @Resource
     private ${ClassName}Mapper ${className}Mapper;
 
@@ -65,10 +70,9 @@ public class ${ClassName}ServiceImpl extends ServiceImpl<${ClassName}Mapper, ${C
      * @return ${functionName}
      */
     @Override
-    public ${ClassName} select${ClassName}By${pkColumn.capJavaField}(${pkColumn.javaType} ${pkColumn.javaField})
-    {
+    public ${ClassName} select${ClassName}By${pkColumn.capJavaField}(${pkColumn.javaType} ${pkColumn.javaField}) {
         return getById(id);
-##        return ${className}Mapper.select${ClassName}By${pkColumn.capJavaField}(${pkColumn.javaField});
+    ##        return ${className}Mapper.select${ClassName}By${pkColumn.capJavaField}(${pkColumn.javaField});
     }
 
     /**
@@ -78,9 +82,7 @@ public class ${ClassName}ServiceImpl extends ServiceImpl<${ClassName}Mapper, ${C
      * @return ${functionName}
      */
     @Override
-    public PageRes<${ClassName}> select${ClassName}List(Integer pageNum,Integer pageSize,${ClassName} ${className})
-    {
-##        return ${className}Mapper.select${ClassName}List(${className});
+    public PageRes<${ClassName}> select${ClassName}List(Integer pageNum, Integer pageSize,${ClassName} ${className}) {
         PageDomain pageDomain = TableSupport.buildPageRequest();
         String orderBy = SqlUtil.escapeOrderBySql(pageDomain.getOrderBy());
         Boolean reasonable = pageDomain.getReasonable();
@@ -91,14 +93,17 @@ public class ${ClassName}ServiceImpl extends ServiceImpl<${ClassName}Mapper, ${C
         entries.stream().forEach(entry -> {
             Object value = entry.getValue();
             if (value != null) {
-                queryWrapper.eq(entry.getKey(), value);
+                if (value instanceof String) {
+                    if (StringUtils.isNotBlank((CharSequence) value)) {
+                        queryWrapper.like(com.baomidou.mybatisplus.core.toolkit.StringUtils.camelToUnderline(entry.getKey()), value);
+                    }
+                } else {
+                    queryWrapper.eq(com.baomidou.mybatisplus.core.toolkit.StringUtils.camelToUnderline(entry.getKey()), value);
+                }
             }
         });
-        if (!queryWrapper.isEmptyOfWhere()) {
-            List<${ClassName}> ${className}s = list(queryWrapper);
-            return new PageRes<>(pageNum, pageSize, page.getTotal(), page.getPages(), ${className}s);
-        }
-        return new PageRes<>(pageNum, pageSize, 0, 0, Lists.newArrayListWithCapacity(0));
+        List<${ClassName}> ${className}s = list(queryWrapper);
+        return new PageRes<>(pageNum, pageSize, page.getTotal(), page.getPages(), ${className}s);
     }
 
     /**
@@ -108,8 +113,7 @@ public class ${ClassName}ServiceImpl extends ServiceImpl<${ClassName}Mapper, ${C
      * @return 结果
      */
     @Override
-    public int insert${ClassName}(${ClassName} ${className})
-    {
+    public int insert${ClassName}(${ClassName} ${className}) {
         return save(${className}) ? GlobalConstant.YES : GlobalConstant.NO;
     }
 
@@ -120,8 +124,7 @@ public class ${ClassName}ServiceImpl extends ServiceImpl<${ClassName}Mapper, ${C
      * @return 结果
      */
     @Override
-    public int update${ClassName}(${ClassName} ${className})
-    {
+    public int update${ClassName}(${ClassName} ${className}) {
         LambdaUpdateWrapper<${ClassName}> updateWrapper = new LambdaUpdateWrapper<>();
         updateWrapper.eq(${ClassName}::getId, demoTheme.getId());
         return update(${className}, updateWrapper) ? GlobalConstant.YES : GlobalConstant.NO;
@@ -135,8 +138,7 @@ public class ${ClassName}ServiceImpl extends ServiceImpl<${ClassName}Mapper, ${C
      */
 
     @Override
-    public int delete${ClassName}By${pkColumn.capJavaField}s(String ${pkColumn.javaField}s)
-    {
+    public int delete${ClassName}By${pkColumn.capJavaField}s(String ${pkColumn.javaField}s) {
         boolean b = removeByIds(Lists.newArrayList(Convert.toStrArray(ids)));
         return b ? GlobalConstant.YES : GlobalConstant.NO;
     }
@@ -148,8 +150,7 @@ public class ${ClassName}ServiceImpl extends ServiceImpl<${ClassName}Mapper, ${C
      * @return 结果
      */
     @Override
-    public int delete${ClassName}By${pkColumn.capJavaField}(${pkColumn.javaType} ${pkColumn.javaField})
-    {
+    public int delete${ClassName}By${pkColumn.capJavaField}(${pkColumn.javaType} ${pkColumn.javaField}) {
         boolean b = removeById(id);
         return b ? GlobalConstant.YES : GlobalConstant.NO;
     }
